--- a/RookieOnlineAssetManagement/ClientApp/package.json
+++ b/RookieOnlineAssetManagement/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.14",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "4.0.3",
     "react-toastify": "^9.1.1",
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.8.0"
   }
 }
